--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,4 @@
-* {
+{
     box-sizing: border-box;
 }
 
@@ -46,7 +46,13 @@ img {
     text-align: center;
     line-height: 45px;
      
-     
+}
+
+.section-subtitle {
+    color: #000;
+    font-size: 20px;
+    text-align: center;
+    display: block;
 }
 
 .header {
@@ -58,6 +64,8 @@ img {
     justify-content: space-between;
     align-items: center;
 }
+
+
 
 .header__info {
     display: flex;
@@ -100,8 +108,8 @@ img {
 .main-block {
     display: flex;
     align-items: center; 
-    padding: 40px 0 15px 0;
-     
+    /*padding: 40px 0 15px 0;*/
+    padding: 50px 0 40px 0;
 }
 
 .main-text {
@@ -115,8 +123,8 @@ img {
     color: #333;
     padding-right: 200px;
     line-height: 55px;
-    margin: 45px 0 20px 0;     
-
+    /*margin: 45px 0 20px 0;*/     
+    margin-bottom: 45px;
 }
 
 .main-text__subtitle{
@@ -126,12 +134,15 @@ img {
      
 }
 
-
+/*.main-image {
+    margin-left: 20px;
+  }
+*/
 .main-image img{
     width: 570px;
     height: 488px; 
     margin-right: -55px; 
-}
+} 
         
  
 .main_list {
@@ -145,6 +156,7 @@ img {
     align-items: center;
     margin-bottom: 20px;
 }
+ 
  
 
 .main_list__image {
@@ -168,12 +180,20 @@ img {
 .offer {
     padding: 90px 0;
     background-image: url('../img/rectangle.png');
+        width: 959px; 
+        height: 595px;
     background-repeat: no-repeat;
     background-position: center right;
     background-size: contain;
     position: relative;
     
 } 
+
+/*@media (max-width: 1200px) {
+    .offer {
+      background-size: cover;
+    }
+  }*/
 
 .offer:before {
     content: ''; 
@@ -244,18 +264,22 @@ img {
 }
 
 .portfolio {
-    padding: 80px 170px 100px 0;
+    /*padding: 80px 170px 100px 0;*/
     background: #f5f5f5 url('../img/rectangle2.png') left repeat-y;
     background-size: 50%;  
-    position: absolute;   
-    margin-right: 0;
+    padding: 100px 0; 
+    /*position: absolute;  
+    margin-right: 0; */
+    display: inline-block;
+    /*align-items: center; 
+    /*padding: 60px 0 35px 0; */
 }
 
-@media (max-width: 1200px) {
+/*@media (max-width: 1200px) {
     .container {
       width: 90%;
     }
-  }
+  }*/
 
 .portfolio__title {
     margin-bottom: 100px;    
@@ -278,6 +302,108 @@ img {
     margin: auto;
     width: 370px; 
     height: 280px;
+}
+
+.price {
+    padding: 100px 0;
+}
+
+.price__title {
+    margin-bottom: 60px;
+
+}
+
+.price__subtitle {
+    margin-bottom: 60px;
+    
+}
+
+.price__card {
+    margin-bottom: 30px;
+}
+
+.cards {
+    display: flex;
+    /*flex-wrap: wrap;*/
+    /*justify-content: space-between; */
+}
+
+.card {
+    text-align: center;
+    border: 2px solid #e8e8e8;
+    transition: .2s;
+}
+
+.card:hover {
+    box-shadow: 0 20px 25px rgba(0, 0, 0, 0.1);
+}
+
+.card:hover .card__image::before {
+    opacity: 1;
+  }
+
+.card__text {
+    padding: 40px;
+}
+
+.card__title {
+    margin-top: 0;
+    font-size: 18px;
+    color: #000;
+    margin-bottom: 30px;
+}
+
+.card__image {
+    position: relative;
+  }
+
+.card__image img {
+    display: block;
+    width: 370px;
+    height: 260px; 
+  }
+
+.card__image::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%; 
+    background-image: linear-gradient(to top, #ffd200 0%, rgba(255, 255, 255, 0) 100%);
+    opacity: 0;
+    -webkit-transition: .2s;
+    transition: .2s;
+  }
+
+.card__link {
+    display: inline-block;
+    font-weight: bold;
+    text-decoration: none;
+    color: #333;
+    position: relative;
+}
+
+.card__link:hover::after {
+    height: 13px;
+  }
+
+.card__link::after {
+    content: '';
+    display: block;
+    position: absolute;
+    z-index: -1; 
+    bottom: -4px;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    background-color: #ffd200;
+    -webkit-transition: .2s;
+    transition: .2s;
+  }
+
+steps__title {
+    margin-bottom: 60px;
 }
 
 .modal {
